[package]
name = "xmrsplayer"
version = "0.4.12"
edition = "2021"
description = "XMrsPlayer is a safe soundtracker music player"
authors = ["Sebastien Bechet"]
documentation = "https://docs.rs/xmrsplayer"
repository = "https://codeberg.org/sbechet/xmrsplayer"

readme = "README.md"
license = "MIT"

keywords = ["xm", "module", "mod", "s3m", "tracker"]
categories = ["multimedia::audio"]

[dependencies]
bitflags = "2.0"
xmrs = { version = "0.4.11" }
clap = { version = "^4.2", optional = true, features = ["cargo", "derive"] }
rodio =  { version = "0.17", optional = true }
console =  { version = "0.15.5", optional = true }
cpal =  { version = "0.15.2", optional = true }

[features]
default = []
demo = ["clap", "rodio", "console", "cpal"]

[lib]
name = "xmrsplayer"
path = "src/lib.rs"

[examples]
rodio_player = { name = "rodio_player", path = "examples/rodio_player.rs", features=["demo"] }
cpal_player = { name = "cpal_player", path = "examples/cpal_player.rs", features=["demo"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
