[package]
name = "xmrsplayer"
version = "0.5.15"
edition = "2021"
description = "XMrsPlayer is a safe soundtracker music player"
authors = ["Sebastien Bechet"]
documentation = "https://docs.rs/xmrsplayer"
repository = "https://codeberg.org/sbechet/xmrsplayer"

readme = "README.md"
license = "MIT"

keywords = ["xm", "module", "mod", "s3m", "tracker"]
categories = ["multimedia::audio"]

[dependencies]
xmrs = { version = "0.5.13", default-features = false }
clap = { version = "4.4", optional = true, features = ["cargo", "derive"] }
rodio =  { version = "0.18", optional = true }
console =  { version = "0.15", optional = true }
cpal =  { version = "0.15", optional = true }
num-traits = { version = "0.2.17",default-features = false, optional=true } # libm wrapper
micromath = { version = "2.1.0", optional=true }

[features]
default = ["std"]
std = ["xmrs/std"]
demo = ["clap", "rodio", "console", "cpal"]
libm = ["num-traits/libm", "xmrs/libm"]
micromath = ["dep:micromath", "xmrs/micromath"]

[lib]
name = "xmrsplayer"
path = "src/lib.rs"

[examples]
rodio_player = { name = "rodio_player", path = "examples/rodio_player.rs", features=["demo"] }
cpal_player = { name = "cpal_player", path = "examples/cpal_player.rs", features=["demo"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
